--- a/2021-1/apunte/config-definiciones.tex
+++ b/2021-1/apunte/config-definiciones.tex
@@ -52,33 +52,40 @@
 \setlist[enumerate, 2]{label=\emph{\alph*)}}
 \setcounter{MaxMatrixCols}{20}
 
- 
+
 \newtheorem{teorema}{Teorema}[section]
 \newtheorem{proposicion}[teorema]{Proposici\'on}
 \newtheorem{corolario}[teorema]{Corolario}
 \newtheorem{lema}[teorema]{Lema}
 \newtheorem{propiedad}[teorema]{Propiedad}
-\theoremstyle{definition}
+\theoremstyle{definition} %en negrita y letra estándar
 \newtheorem{definicion}[teorema]{Definici\'on}
+
+\theoremstyle{remark} % en itálica
+\newtheorem{observacion}[teorema]{Observaci\'on}
+\newtheorem{obs}[teorema]{Observaci\'on}
+\newtheorem{nota}[teorema]{Nota}
 \newtheorem{ejemplo}[teorema]{Ejemplo}
 \newtheorem{resultado}[teorema]{Resultado}
 \newtheorem{problema}[teorema]{Problema}
 \newtheorem{ejercicio}[teorema]{Ejercicio}
 \newtheorem{ejerciciof}[teorema]{}
-\newtheorem{observacion}[teorema]{Observaci\'on}
-\newtheorem{obs}[teorema]{Observaci\'on}
 % sin numero
+\newtheorem*{observacion*}{Observaci\'on}
+\newtheorem*{obs*}{Observaci\'on}
+\newtheorem*{nota*}{Nota}
 \newtheorem*{ejemplo*}{Ejemplo}
 \newtheorem*{resultado*}{Resultado}
 \newtheorem*{problema*}{Problema}
 \newtheorem*{ejercicio*}{Ejercicio}
 \newtheorem*{ejerciciof*}{}
-\newtheorem*{observacion*}{Observaci\'on}
-\newtheorem*{obs*}{Observaci\'on}
-% En italica el nombre
-\theoremstyle{remark}
-\newtheorem{nota}[teorema]{Nota}
-\newtheorem*{nota*}{Nota}
+
+\newlist{enumelem}{enumerate}{10} 
+\setlist[enumelem]{label=\textit{E\arabic*.},ref=\textit{E\arabic*}}
+
+\newlist{enumex}{enumerate}{10} 
+\setlist[enumex,1]{label={\arabic*)},ref=\textit{\arabic*}}
+\setlist[enumex,2]{label=\emph{\alph*)}}
 
 \usepackage[a4paper, left=3cm, right=4cm, bottom=2.5cm]{geometry}
 
